WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60031
Web Inspector: can't inspect element in an iframe when element originates from non-frame document
https://bugs.webkit.org/show_bug.cgi?id=60031
Summary
Web Inspector: can't inspect element in an iframe when element originates fro...
Yury Semikhatsky
Reported
2011-05-03 09:07:20 PDT
What steps will reproduce the problem? 1. Open
http://kangax.github.com/jstests/iframe-createElement-web-inspector/
2. Try inspecting both elements in an iframe 3. One of the elements can't be inspected This seems to be due to an element originating from context other than iframe's context (i.e. created via <main document>.createElement rather than <iframe document>.createElement). Original Chromium bug report:
http://code.google.com/p/chromium/issues/detail?id=77453
Attachments
Patch
(13.55 KB, patch)
2011-05-03 09:14 PDT
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
Patch for landing
(13.01 KB, patch)
2011-05-03 23:04 PDT
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2011-05-03 09:14:35 PDT
Created
attachment 92084
[details]
Patch
Pavel Feldman
Comment 2
2011-05-03 10:05:30 PDT
Comment on
attachment 92084
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=92084&action=review
> Source/WebCore/bindings/js/JSInjectedScriptHostCustom.cpp:102 > + return jsBoolean(true);
return jsUndefined() ?
Yury Semikhatsky
Comment 3
2011-05-03 23:04:14 PDT
Created
attachment 92196
[details]
Patch for landing Review comments addressed.
Yury Semikhatsky
Comment 4
2011-05-03 23:45:59 PDT
Committed
r85722
: <
http://trac.webkit.org/changeset/85722
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug